# scrap-trace-b

./: .gitignore  ANALYSIS_REPORT.md  COMPREHENSIVE_ANALYSIS.md  DEEP_ANALYSIS_REPORT.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  README.md  Requirement.md
.cargo/: env
backend/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/migrations/: 001_init_schema.sql  001_initial_schema.sql
backend/src/: config.rs  consumer.rs  crypto.rs  error.rs  main.rs  models.rs  nats.rs  scoring.rs  state.rs
backend/src/api/handlers/: audit_handler.rs  auth_handler.rs  consent_handler.rs  handshake_handler.rs  material_handler.rs  mod.rs  report_handler.rs  scoring_handler.rs  supplier_handler.rs  upload_handler.rs
backend/src/api/middleware/: auth_middleware.rs
backend/src/api/routes/: audit_routes.rs  auth_routes.rs  consent_routes.rs  handshake_routes.rs  material_routes.rs  mod.rs  report_routes.rs  scoring_routes.rs  supplier_routes.rs  upload_routes.rs
backend/src/auth/: jwt.rs  mod.rs
backend/src/config/: mod.rs
backend/src/consumers/: event_consumer.rs  mod.rs
backend/src/core/: crdt.rs  merkle.rs  mod.rs
backend/src/db/: pool.rs
backend/src/models/: mod.rs
backend/src/nats/: mod.rs
backend/src/repositories/: material_repository.rs  mod.rs  scoring_repository.rs  supplier_repository.rs
backend/src/routes/: auth.rs  export.rs  handshake.rs  health.rs  material.rs  mod.rs  score.rs
backend/src/scoring/: calculator.rs  metrics.rs  repository.rs
backend/src/services/: minio_service.rs  mod.rs  redis_service.rs  scoring_service.rs
backend/src/utils/: crypto.rs  error.rs  mod.rs
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  index.ts  (+5 more)
mobile/android/: README.md  build.gradle.kts  settings.gradle.kts
mobile/ios/: README.md
(+89 files in other folders)
